// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the HTMLView component should render a block quote 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "borderBottomWidth": 0.5,
        "borderColor": "#858585",
        "borderTopWidth": 0.5,
        "marginVertical": 40,
        "paddingHorizontal": 20,
        "paddingVertical": 30,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component should render a line break (br) 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    

  </Text>
</View>
`;

exports[`the HTMLView component should render a link 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "#6bac43",
            "textDecorationLine": "underline",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Google
        </Text>
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component should render a list 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Testings
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Testings
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`the HTMLView component should render a paragraph 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component should render an H1 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 52.2,
        "lineHeight": 54.81,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an H2 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 42.3,
        "lineHeight": 53.58,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an H3 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 32.4,
        "lineHeight": 41.04,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an H4 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 25.2,
        "lineHeight": 31.28,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an H5 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 20.02,
        "lineHeight": 25.33,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an H6 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 15.75,
        "lineHeight": 17.75,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an H7 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 14,
        "lineHeight": 15.78,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`the HTMLView component should render an image 1`] = `
<View>
  <View
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#dddddd",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`the HTMLView component should render bold text 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={true}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif-Bold",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Testings
        </Text>
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component should render example HTML 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        I sat on my couch next to my high school 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "#6bac43",
            "textDecorationLine": "underline",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Fuse Group
        </Text>
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        , silently fuming at their inability to put their phones down during Bible study. Finally, I spoke up, teasing one of the girls in a tone that clearly said, “I’m not actually kidding.” 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        A few days later, I was in the car with my sister, and as I sat in the passenger seat responding to emails, I heard her laugh and say, “You always mumble when you are typing. Stop doing that.” 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        “Sorry,” I responded. “I just don’t want people to think I’m ignoring them when I’m typing.”
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        But the truth is, I am ignoring them! In my head, this behavior is totally acceptable. I tell myself I’m tending to my priorities in order, and in doing so, I send a message to the person in front of me that she is of lesser importance.
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "borderBottomWidth": 0.5,
        "borderColor": "#858585",
        "borderTopWidth": 0.5,
        "marginVertical": 40,
        "paddingHorizontal": 20,
        "paddingVertical": 30,
      }
    }
  >
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif-Italic",
            "fontSize": 20.02,
            "lineHeight": 33.11,
            "textAlign": "center",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          My phone is the primary outlet that distracts me from people who need my attention.
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        I quickly get frustrated when I am the one on the outside, but how often to I shut others out during my own social media binges or email frenzies? Just like my girls, I’m learning that my phone is the primary outlet that distracts me from people who need my attention.
      </Text>
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 32.4,
        "lineHeight": 41.04,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Why Being Present Matters
      </Text>
    </Text>
  </Text>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        There is nothing wrong with using our phones — as long as we remember that the best investment we can make is to invest in our relationships with Jesus and each other. We were created for 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "#6bac43",
            "textDecorationLine": "underline",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          community
        </Text>
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
         by God, who exists in community as Father, Son, and Holy Spirit (John 1:1-2, Genesis 2:18). 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Our phones help us stay connected, but they are not the foundation of all connection. If we’re honest, our phones are much quicker to distract and disengage us from the people right in front of us. 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Jesus said loving God and loving others is greatest of all God’s commandments (Matthew 22:38-40). And, after trying everything the world had to offer, King Solomon reminded his people that their relationships with God and others are the only things that really matter (Ecclesiastes 2:24-26, Ecclesiastes 3:9). 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "borderBottomWidth": 0.5,
        "borderColor": "#858585",
        "borderTopWidth": 0.5,
        "marginVertical": 40,
        "paddingHorizontal": 20,
        "paddingVertical": 30,
      }
    }
  >
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif-Italic",
            "fontSize": 20.02,
            "lineHeight": 33.11,
            "textAlign": "center",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Greater love has no one than this: to lay down one’s phone for one’s loved ones.
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        So the next time we feel like we have to text back immediately or tweet before someone else does, consider: 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Am I putting others before myself right now?
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          How can I love the people around me if I’m not even paying attention to them?
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          What if Jesus wants to speak through me, but I’ve got my nose stuck in my phone? 
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        The world won’t implode if we don’t reply to every text or email immediately. And that Instagram picture doesn’t need to go up ASAP. If it’s already been a week between posts, what’s a few more hours? We love everyone better — our friends to our coworkers to our social media followers — when we give them the gift of our full attention. 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        I can almost hear Jesus saying, “Greater love has no one than this: to lay down one’s phone for one’s loved ones”  (John 15:13). 
      </Text>
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": "OpenSans-Bold",
        "fontSize": 32.4,
        "lineHeight": 41.04,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Four Ways To Stay Away From Your Phone And Be Intentionally Present
      </Text>
    </Text>
  </Text>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "#6bac43",
            "textDecorationLine": "underline",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          This holiday season
        </Text>
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        , we will have more opportunities to be around friends and family than usual. So let’s make the most of each minute. The following are some tips can help us all be a little more present.  
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Turn your phone off, leave it in the car, or put it in airplane mode. Habitual notification checks can take a break.
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Talk about something other than yourself. Ask someone else about their life (job, school, kids).
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Look for opportunities to encourage someone. Ask the Holy Spirit to speak through you and help you love people.
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 9,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Ask Jesus to keep your heart interested and engaged in what really matters. He wants to help!
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Intentionally taking advantage of time with loved ones sometimes does require sacrificing our own immediate desires or comforts, but that’s what we are commanded to do (Philippians 2:3). 
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Take pictures, but don’t let the only memory be a digital one. The positive outcome of interactions should be more than Instagram likes. Unplug from social media, choose to be present, and you will be surprised at the good it does for your heart and the hearts of those around you.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component should render handle relative links 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Testings 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "color": "#6bac43",
            "textDecorationLine": "underline",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Google
        </Text>
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component should render italic text 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        bold={false}
        ellipsizeMode="tail"
        italic={true}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "DroidSerif-Italic",
            "fontSize": 20.02,
            "lineHeight": 33.11,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Testings
        </Text>
      </Text>
    </Text>
  </View>
</View>
`;

exports[`the HTMLView component strips out badly formatted links 1`] = `
<View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={false}
      ellipsizeMode="tail"
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "DroidSerif",
          "fontSize": 20.02,
          "lineHeight": 33.11,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Bad link
      </Text>
    </Text>
  </View>
</View>
`;
